# fantasticfeatures

./: .gitignore  Q_and_A.ipynb  README.md  colab_requirements.txt  dataset_noise_generator.ipynb  dataset_noise_generator.py  datasets_overview.ipynb  how-to_synthetic-data.ipynb  main.ipynb  mystery_dataset_solutions.ipynb  mystery_nonlinear_1.csv  noise-on-y_different-distributions.ipynb  noise-on-y_vs_noise-on-y.ipynb  notes.ipynb  plotting.py  pyproject.toml  requirements.txt  setup.py  statsmodels_summary.ipynb  transformations.ipynb
data/: caesarian.csv  golf.csv  interesting_data.csv  rent.csv  rent98_00.csv  salary.csv
data/ex1/: mystery_linear.csv  mystery_nonlinear_2.csv  mystery_nonlinear_3.csv  mystery_nonlinear_4.csv  mystery_nonlinear_5.csv
data/ex2/: ds_1.csv  ds_2.csv  ds_3.csv  ds_4.csv  ds_5.csv
data/other/: forest.csv  patentdata.csv
dataprep/: data_with_nonlinearity.csv  data_with_nonlinearity.ipynb  data_with_nonlinearity_more.ipynb  dataset_gen_interesting.ipynb
dump/: datasets_overview.ipynb  notes.ipynb
fantasticfeatures/: plotting.py
materials/r/07a_autocorrelated_errors/: 07a_autocorrelated_errors.Rmd  7a.csv
materials/r/07a_homosk_rent/: 07a_homoscedasticity_rent.Rmd
materials/r/07a_homosk_sim/: sim.csv
materials/r/07a_outliers/: 07a_outliers.Rmd
materials/r/07a_transformations/: 07a_transformations.Rmd
r/07a_boxcox/: 07a_boxcox_transformations.Rmd
r/07a_homosk_sim/: 07a_homoscedasticity_sim.Rmd
r/07a_outliers_with_test/: 07a_outliers_with_test.Rmd
r/07b_qqplot/: 07b_qqplot_sim.Rmd
(+2 files in other folders)
