[tool.poetry]
name = "Fantastic features"
version = "0.1.0"
description = "Statistical feature engineering"
authors = ["Teresa Kubacka <teresakubacka@gmail.com>, Magdalena Surowka <magdalena@surowka.ch>"]

[tool.poetry.dependencies]
python = "^3.7.12"
scikit-learn = "0.22.2.post1"
statsmodels = "0.10.2"
matplotlib = "3.2.2"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
